--------------------------------------------------------------------------------
Changes for 2.3.0

New features:
...G...PS. [ZBXNEXT-2225] added a percentage free parameter to system.swap.size item; changed the way swap size is calculated (Juris)
..F....... [ZBXNEXT-1119] changed the global search to also search by technical host and template names (Pavels)
...G...... [ZBXNEXT-2194] added configuration option to include all files in a directory on Windows (Nikolaj)
........S. [ZBXNEXT-751] added support of user macros in the notifications and commands (Nikolaj)
A.F....... [ZBXNEXT-2123] implemented the application and host inventory filters on the trigger monitoring page (Pavels)
A.F.I...S. [ZBXNEXT-2117] added "Description" field for templates, hosts and proxies (Eduard, Sasha)
..F.I..... [ZBXNEXT-1533] added "Action name" in "History of actions" screen and added a patch to change screen item sort order (Oleg, Pavels)
..F....... [ZBX-7850] unified the "Go to" section of host pop-up menus displayed in maps and other other places (Ivo)
..F....... [ZBXNEXT-421] implemented user name in action audit page (Eduard)
..F....... [ZBXNEXT-2167] improved info column in latest data monitoring and item, trigger, discovery host configuration (Eduard)
..F....... [ZBX-6374] added pagination in availability reports (Oleg)
..F....... [ZBXNEXT-1533] added "Action name" in Audit -> Action log (Oleg)
...G...... [ZBX-7742] added error message upon encountering trailing data for zabbix_sender when reading from file (Juris)
A.F.I...S. [ZBXNEXT-581] implemented the ability to filter by multiple LLD macros (Pavels, wiper)
..F....... [ZBX-7361] implemented alphabetic host ordering when trigger has many hosts (Ivo)
..F....... [ZBXNEXT-1632] added graph link in host menu popup "Go to" section (Eduard)
..F....... [ZBXNEXT-1735] removed graph and history link from items in latest data page, if history and trends are disabled (Oleg)