@@ -392,7 +392,7 @@ else {
 		'selectHosts' => API_OUTPUT_EXTEND,
 		'selectItems' => array('itemid', 'hostid', 'key_', 'type', 'flags', 'status'),
 		'selectFunctions' => API_OUTPUT_EXTEND,
-		'selectDependencies' => API_OUTPUT_EXTEND,
+		'selectDependencies' => array('triggerid', 'description'),
 		'selectDiscoveryRule' => API_OUTPUT_EXTEND
 	));
 
@@ -403,12 +403,40 @@ else {
 		order_result($data['triggers'], $sortfield, getPageSortOrder());
 	}
 
-	foreach ($data['triggers'] as &$trigger) {
-		if (count($trigger['dependencies']) > 1) {
-			order_result($trigger['dependencies'], 'hostname', ZBX_SORT_UP);
+	$dependencyIds = array();
+	foreach ($data['triggers'] as $trigger) {
+		foreach ($trigger['dependencies'] as $depTrigger) {
+			$dependencyIds[$depTrigger['triggerid']] = $depTrigger['triggerid'];
 		}
 	}
-	unset($trigger);
+
+	$dependencyTriggers = array();
+	if ($dependencyIds) {
+		$dependencyTriggers = API::Trigger()->get(array(
+			'triggerids' => $dependencyIds,
+			'output' => array('triggerid', 'flags', 'description', 'status'),
+			'selectHosts' => array('hostid', 'name'),
+			'preservekeys' => true
+		));
+
+		// sort dependencies
+		foreach ($data['triggers'] as &$trigger) {
+			if (count($trigger['dependencies']) > 1) {
+				order_result($trigger['dependencies'], 'description', ZBX_SORT_UP);
+			}
+		}
+		unset($trigger);
+
+		// sort dependency trigger hosts
+		foreach ($dependencyTriggers as &$trigger) {
+			if (count($dependencyTriggers[$trigger['triggerid']]['hosts']) > 1) {
+				order_result($dependencyTriggers[$trigger['triggerid']]['hosts'], 'name', ZBX_SORT_UP);
+			}
+		}
+		unset($trigger);
+	}
+
+	$data['dependencyTriggers'] = $dependencyTriggers;
 
 	// get real hosts
 	$data['realHosts'] = getParentHostsByTriggers($data['triggers']);
